--- a/index.html
+++ b/index.html
@@ -10,22 +10,17 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.poptrox.min.js"></script>
-		<script src="js/jquery.scrolly.min.js"></script>
-		<script src="js/jquery.scrollgress.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/init.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
 			<link rel="stylesheet" href="css/style-normal.css" />
 		</noscript>
+		<link rel="stylesheet" type="text/css" href="css/tictac/style.css">
+		<link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
-	<body>
+	<body ng-app="ThirdDime">
 
 			
 		<!-- Intro -->
@@ -75,25 +70,38 @@
 						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis 
 						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
 					</header>
-					
-				<div id="board"></div>
 
-					<!-- Modal -->
-					<div class="modal" id="modal-quiz" aria-hidden="true">
-					  <div class="modal-dialog">
-						<div class="modal-header">
-						  <h2>Modal in CSS?</h2>
+					<div ng-controller="QuizController">
+						<div ng-repeat="quiz in quizes">
+							<div class="card" ng-click="askQuestion($index)">
+								<div class="flipper" ng-class="{hover: !quiz.flipped}">
+									<div class="front">
+										<img src="">
+									</div>
+									<div class="back">
+										<img src="">
+									</div>
+								</div>
+							</div>
 						</div>
-						<div class="modal-body">
-						  <p>One modal example here! :D</p>
-						</div>
-						<div class="modal-footer">
-						  <a id="modal-close" class="btn">Nice!</a>
-						</div>
-					  </div>
 					</div>
-					<!-- /Modal -->	
 
+						<!-- Modal -->
+						<div class="modal" id="modal-quiz" aria-hidden="true">
+						  <div class="modal-dialog">
+							<div class="modal-header">
+							  <h2>Modal in CSS?</h2>
+							</div>
+							<div class="modal-body">
+							  <p>One modal example here! :D</p>
+							</div>
+							<div class="modal-footer">
+							  <a id="modal-close" class="btn">Nice!</a>
+							</div>
+						  </div>
+						</div>
+						<!-- /Modal -->	
+					</div>
 				</div>
 			</section>
 			
@@ -139,6 +147,22 @@
 					</ul>
 			
 			</footer>
+
+		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+		<script src="bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="bower_components/angular/angular.min.js"></script>
+	    <script src="bower_components/angular-aria/angular-aria.js"></script>
+	    <script src="bower_components/angular-animate/angular-animate.js"></script>
+	    <script src="bower_components/hammerjs/hammer.js"></script>
+	    <script src="bower_components/angular-material/angular-material.js"></script>
+		<script src="vendor/original/jquery.poptrox.min.js"></script>
+		<script src="vendor/original/jquery.scrolly.min.js"></script>
+		<script src="vendor/original/jquery.scrollgress.min.js"></script>
+		<script src="vendor/original/skel.min.js"></script>
+		<script src="vendor/original/init.js"></script>
+		<script src="js/thirdDime.module.js"></script>
+		<script src="js/quiz/quiz.controller.js"></script>
+		<script src="js/intro/intro.controller.js"></script>
 
 	</body>
 </html>
