--- a/thirdDime/static/js/funda/funda3.modal.html
+++ b/thirdDime/static/js/funda/funda3.modal.html
@@ -9,7 +9,9 @@
 		<div layout="row" layout-align="center center">
 			<span flex="15"></span>
 			<span flex="70">
-				<h3>{{intro}}</h3>
+				<h3>To talk about The Persistence of Memory is really to talk about the culmination of themes, ideas, and concepts that vibrated through intellectual thought during the early decades of the 20th century. For example Dali is considering the relationship between the universe as seen through Einstein, the subconscious state, as depicted through Freud, put together with the surrealist perspective of the world. 
+Now let’s see what the others had to say about it.
+				</h3>
 			</span>
 			<span flex="15"></i></span>
 		</div>
@@ -18,9 +20,4 @@
 			<span flex="15"><i class="fa fa-quote-right"></i></span>
 		</div>
 	</md-content>
-	<div class="md-actions" layout="row" layout-align="center center" style="background-color: #3F51B5;">
-		<md-button class="md-primary" ng-click="questionDialog()" aria-label="Question">
-	      Dive
-	    </md-button>
-</div>
-</md-dialog>
+</md-dialog> 
