--- a/thirdDime/static/js/funda/funda5.modal.html
+++ b/thirdDime/static/js/funda/funda5.modal.html
@@ -2,6 +2,10 @@
 	<md-content style="background-color: #3F51B5; color: white;">
 		<br/>
 		<br/>
+		<div layout="row" layout-align="center center">
+			<div ng-show="result"> <h1>BRAVO</h1></div>
+			<div ng-hide="result"> <h1>The Skull</h1></div>
+		</div>
 		<div layout="row" layout-align="center center" align="right">
 			<span flex="15"><i class="fa fa-quote-left"></i></span>
 			<span flex="85"></span>
@@ -9,7 +13,11 @@
 		<div layout="row" layout-align="center center">
 			<span flex="15"></span>
 			<span flex="70">
-				<h3>{{intro}}</h3>
+				<h3>When we turn this painting, the rich trappings fade out and the ultimate victor comes into focus. Death eclipses everything.
+				</h3>
+				<div layout="row" layout-align="center center">
+		        	<img style="margin: auto; max-width: 100%;" src="/static/images/amb.gif" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+		        </div>
 			</span>
 			<span flex="15"></i></span>
 		</div>
@@ -18,9 +26,4 @@
 			<span flex="15"><i class="fa fa-quote-right"></i></span>
 		</div>
 	</md-content>
-	<div class="md-actions" layout="row" layout-align="center center" style="background-color: #3F51B5;">
-		<md-button class="md-primary" ng-click="questionDialog()" aria-label="Question">
-	      Dive
-	    </md-button>
-</div>
-</md-dialog>
+</md-dialog> 
