--- a/thirdDime/static/js/funda/funda7.modal.html
+++ b/thirdDime/static/js/funda/funda7.modal.html
@@ -9,7 +9,8 @@
 		<div layout="row" layout-align="center center">
 			<span flex="15"></span>
 			<span flex="70">
-				<h3>{{intro}}</h3>
+				<h3>InfoGraphic
+				</h3>
 			</span>
 			<span flex="15"></i></span>
 		</div>
@@ -18,9 +19,4 @@
 			<span flex="15"><i class="fa fa-quote-right"></i></span>
 		</div>
 	</md-content>
-	<div class="md-actions" layout="row" layout-align="center center" style="background-color: #3F51B5;">
-		<md-button class="md-primary" ng-click="questionDialog()" aria-label="Question">
-	      Dive
-	    </md-button>
-</div>
-</md-dialog>
+</md-dialog> 
