--- a/thirdDime/static/js/question/question6.modal.html
+++ b/thirdDime/static/js/question/question6.modal.html
@@ -26,39 +26,71 @@
     <ng-switch on="data.selectedIndex" class="tabpanel-container">
         <div role="tabpanel" id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
         	<img style="margin: auto; max-width: 100%;" src="/static/images/test1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-          <md-radio-group ng-model="movement.paint1" flex="20">
-            <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer6('1')">Impressionism</md-radio-button>
-            <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer6('1')"> Fauvism </md-radio-button>
-            <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer6('1')">Cubism</md-radio-button>
-            <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer6('1')">Futurism</md-radio-button>
-          </md-radio-group>
+          <div flex="20">
+            <div layout="column">
+              <div flex ng-show="showResult61"><br/><br/>
+                <div ng-show="result61"><h1>BRAVO</h1></div>
+                <div ng-hide="result61"><h1>It is FUTURISM</h1></div>
+              </div>
+              <md-radio-group ng-model="movement.paint1" flex="70">
+                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer61('Impressionism')">Impressionism</md-radio-button>
+                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer61('Fauvism')"> Fauvism </md-radio-button>
+                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer61('Cubism')">Cubism</md-radio-button>
+                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer61('Futurism')">Futurism</md-radio-button>
+              </md-radio-group>
+            </div>
+          </div>
         </div>
         <div role="tabpanel" id="tab2-content" aria-labelledby="tab2" ng-switch-when="1" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
         	<img style="margin: auto; max-width: 100%;" src="/static/images/test2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-          <md-radio-group ng-model="movement.paint2" flex="20">
-            <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer6('2')">Impressionism</md-radio-button>
-            <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer6('2')"> Fauvism </md-radio-button>
-            <md-radio-button value="Cubism" aria-label="Label 3"ng-click="answer6('2')" >Cubism</md-radio-button>
-            <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer6('2')">Futurism</md-radio-button>
-          </md-radio-group>
+          <div flex="20">
+            <div layout="column">
+              <div flex ng-show="showResult62"><br/><br/>
+                <div ng-show="result62"><h1>BRAVO</h1></div>
+                <div ng-hide="result62"><h1>It is FAUVISM</h1></div>
+              </div>
+              <md-radio-group ng-model="movement.paint2" flex="70">
+                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer62('Impressionism')">Impressionism</md-radio-button>
+                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer62('Fauvism')"> Fauvism </md-radio-button>
+                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer62('Cubism')">Cubism</md-radio-button>
+                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer62('Futurism')">Futurism</md-radio-button>
+              </md-radio-group>
+            </div>
+          </div>
         </div>
         <div role="tabpanel" id="tab3-content" aria-labelledby="tab3" ng-switch-when="2" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
           <img style="margin: auto; max-width: 100%;" src="/static/images/test3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-          <md-radio-group ng-model="movement.paint3" flex="20">
-            <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer6('3')">Impressionism</md-radio-button>
-            <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer6('3')"> Fauvism </md-radio-button>
-            <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer6('3')">Cubism</md-radio-button>
-            <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer6('3')">Futurism</md-radio-button>
-          </md-radio-group>
+          <div flex="20">
+            <div layout="column">
+              <div flex ng-show="showResult63"><br/><br/>
+                <div ng-show="result63"><h1>BRAVO</h1></div>
+                <div ng-hide="result63"><h1>It is IMPRESSIONISM</h1></div>
+              </div>
+              <md-radio-group ng-model="movement.paint3" flex="70">
+                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer63('Impressionism')">Impressionism</md-radio-button>
+                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer63('Fauvism')"> Fauvism </md-radio-button>
+                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer63('Cubism')">Cubism</md-radio-button>
+                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer63('Futurism')">Futurism</md-radio-button>
+              </md-radio-group>
+            </div>
+          </div>
         </div>
         <div role="tabpanel" id="tab4-content" aria-labelledby="tab4" ng-switch-when="3" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
           <img style="margin: auto; max-width: 100%;" src="/static/images/test4.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-          <md-radio-group ng-model="movement.paint4" flex="20">
-            <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer6('4')">Impressionism</md-radio-button>
-            <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer6('4')"> Fauvism </md-radio-button>
-            <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer6('4')">Cubism</md-radio-button>
-            <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer6('4')">Futurism</md-radio-button>
-          </md-radio-group>
+          <div flex="20">
+            <div layout="column">
+              <div flex ng-show="showResult64"><br/><br/>
+                <div ng-show="result64"><h1>BRAVO</h1></div>
+                <div ng-hide="result64"><h1>It is CUBISM</h1></div>
+              </div>
+            </div>
+              <md-radio-group ng-model="movement.paint4" flex="70">
+                <md-radio-button value="Impressionism" aria-label="Label 1" ng-click="answer64('Impressionism')">Impressionism</md-radio-button>
+                <md-radio-button value="Fauvism" aria-label="Label 2" ng-click="answer64('Fauvism')"> Fauvism </md-radio-button>
+                <md-radio-button value="Cubism" aria-label="Label 3" ng-click="answer64('Cubism')">Cubism</md-radio-button>
+                <md-radio-button value="Futurism" aria-label="Label 4" ng-click="answer64('Futurism')">Futurism</md-radio-button>
+              </md-radio-group>
+          </div>
         </div>
     </ng-switch>
     <div class="after-tabs-area" layout="row" layout-sm="column" layout-margin layout-align="left center">
