--- a/thirdDime/static/js/question/question3.modal.html
+++ b/thirdDime/static/js/question/question3.modal.html
@@ -14,10 +14,10 @@
         </div>
         <div class="md-actions" layout="row" layout-align="center center">
             <md-radio-group layout="row" layout-align="start center">
-                <md-radio-button value="Decay" aria-label="Label 1" ng-click="answer('Decay')">Death and decay</md-radio-button>
-                <md-radio-button value="Relativity" aria-label="Label 2" ng-click="answer('Relativity')"> Relativity's idea of time </md-radio-button>
-                <md-radio-button value="Dream" aria-label="Label 3" ng-click="answer('Dream')">Dream state</md-radio-button>
-                <md-radio-button value="Fluidity" aria-label="Label 4" ng-click="answer('Fluidity')">Fluidity of time</md-radio-button>
+                <md-radio-button value="Decay" aria-label="Label 1" ng-click="answer3('one')">Death and decay</md-radio-button>
+                <md-radio-button value="Relativity" aria-label="Label 2" ng-click="answer3('two')"> Relativity's idea of time </md-radio-button>
+                <md-radio-button value="Dream" aria-label="Label 3" ng-click="answer3('three')">Dream state</md-radio-button>
+                <md-radio-button value="Fluidity" aria-label="Label 4" ng-click="answer3('four')">Fluidity of time</md-radio-button>
             </md-radio-group>       
         </div>
     </md-content>
