--- a/thirdDime/static/js/question/question7.modal.html
+++ b/thirdDime/static/js/question/question7.modal.html
@@ -11,13 +11,13 @@
         <div layout="row" layout-align="end center" style="font-size: .77em;">Options at bottom.</div>
   	<md-tabs md-selected="data.selectedIndex">
       <md-tab id="tab1" aria-controls="tab1-content">
-        Item One
+        By Van Dyck
       </md-tab>
       <md-tab id="tab2" aria-controls="tab2-content">
-        Item Two
+        By Conca
       </md-tab>
       <md-tab id="tab3" aria-controls="tab3-content">
-        Item Three
+        By Poussin
       </md-tab>
       <md-tab id="tab4" aria-controls="tab4-content">
         Item four
