--- a/thirdDime/static/js/funda/funda3.modal.html
+++ b/thirdDime/static/js/funda/funda3.modal.html
@@ -1,23 +1,42 @@
-<md-dialog aria-label="Mango (Fruit)">
-	<md-content style="background-color: #3F51B5; color: white;">
-		<br/>
-		<br/>
-		<div layout="row" layout-align="center center" align="right">
-			<span flex="15"><i class="fa fa-quote-left"></i></span>
-			<span flex="85"></span>
-		</div>
-		<div layout="row" layout-align="center center">
-			<span flex="15"></span>
-			<span flex="70">
-				<h3>To talk about The Persistence of Memory is really to talk about the culmination of themes, ideas, and concepts that vibrated through intellectual thought during the early decades of the 20th century. For example Dali is considering the relationship between the universe as seen through Einstein, the subconscious state, as depicted through Freud, put together with the surrealist perspective of the world. 
-Now let’s see what the others had to say about it.
-				</h3>
-			</span>
-			<span flex="15"></i></span>
-		</div>
-		<div layout="row" layout-align="center center">
-			<span flex="85"></span>
-			<span flex="15"><i class="fa fa-quote-right"></i></span>
-		</div>
-	</md-content>
-</md-dialog> 
+<div ng-controller="DaliController">
+	<md-dialog aria-label="Mango (Fruit)">
+		<md-content style="background-color: #3F51B5; color: white;">
+			<br/>
+			<br/>
+			<div layout="row" layout-align="center center" align="right">
+				<span flex="15"><i class="fa fa-quote-left"></i></span>
+				<span flex="85"></span>
+			</div>
+			<div layout="row" layout-align="center center">
+				<span flex="15"></span>
+				<span flex="70">
+					<h3>To talk about The Persistence of Memory is really to talk about the culmination of themes, ideas, and concepts that vibrated through intellectual thought during the early decades of the 20th century. For example Dali is considering the relationship between the universe as seen through Einstein, the subconscious state, as depicted through Freud, put together with the surrealist perspective of the world. 
+	Now let’s see what the others had to say about it -
+					</h3>
+					<div layout="column">
+						<h4>Death and Decay</h4>
+						<md-progress-linear md-theme="red" md-mode="determinate" ng-value="vote31"></md-progress-linear><br/><br/>
+					</div>
+					<div layout="column">
+						<h4>Relavity's idea of time</h4>
+					<md-progress-linear md-theme="brown" md-mode="determinate" ng-value="vote32"></md-progress-linear><br/><br/>
+					</div>
+					<div layout="column">
+						<h4>Dream state</h4>
+					<md-progress-linear md-theme="green" md-mode="determinate" ng-value="vote33"></md-progress-linear><br/><br/>
+					</div>
+					<div layout="column">
+						<h4>Fluidity of time</h4>
+					<md-progress-linear md-theme="yellow" md-mode="determinate" ng-value="vote34"></md-progress-linear><br/><br/>
+					</div>
+
+				</span>
+				<span flex="15"></i></span>
+			</div>
+			<div layout="row" layout-align="center center">
+				<span flex="85"></span>
+				<span flex="15"><i class="fa fa-quote-right"></i></span>
+			</div>
+		</md-content>
+	</md-dialog> 
+</div>
