Adding color to quiz

--- a/thirdDime/static/js/funda/funda1.modal.html
+++ b/thirdDime/static/js/funda/funda1.modal.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="Mango (Fruit)">
-	<md-content style="background-color: #3F51B5; color: white;">
+	<md-content style="background-color: {{color}}; color: white;">
 		<br/>
 		<br/>
 		<div layout="row" layout-align="center center">
