--- a/thirdDime/static/js/funda/funda9.modal.html
+++ b/thirdDime/static/js/funda/funda9.modal.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="Mango (Fruit)">
-	<md-content style="background-color: #3F51B5; color: white;">
+	<md-content style="background-color: {{color}}; color: white;">
 		<br/>
 		<br/>
 		<div layout="row" layout-align="center center">
@@ -13,7 +13,11 @@
 		<div layout="row" layout-align="center center">
 			<span flex="15"></span>
 			<span flex="70">
-				<h3>When we turn this painting, the rich trappings fade out and the ultimate victor comes into focus. Death eclipses everything.
+						<h3>Artists are historians and their art the journal. Undeniably, art is not only an expression of beauty and creativity; it is also a reflection of the times.Events such as war impact artists even deeper. <br/>
+		The first painting is by Picasso where he depicts a massacre during the Korean war.<br/>
+		The second painting is by Otto Dix which represents a ruthless class struggle taking place in Germany.<br/>
+		The third painting is by Goya where he presents a scene from the Peninsular war.<br/>
+		The fourth painting is by Manet depicting the execution of Maximillian by a firing squad.<br/>
 				</h3>
 			</span>
 			<span flex="15"></i></span>
