--- a/thirdDime/static/js/intro/intro.modal.html
+++ b/thirdDime/static/js/intro/intro.modal.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="Mango (Fruit)">
-	<md-content style="background-color: #3F51B5; color: white;">
+	<md-content style="background-color: {{color}}; color: white;">
 		<br/>
 		<br/>
 		<div layout="row" layout-align="center center" align="right">
@@ -18,7 +18,7 @@
 			<span flex="15"><i class="fa fa-quote-right"></i></span>
 		</div>
 	</md-content>
-	<div class="md-actions" layout="row" layout-align="center center" style="background-color: #3F51B5;">
+	<div class="md-actions" layout="row" layout-align="center center" style="background-color: {{color}};">
 		<md-button class="md-primary" ng-click="questionDialog()" aria-label="Question">
 	      Dive
 	    </md-button>
