--- a/thirdDime/static/js/funda/funda4.modal.html
+++ b/thirdDime/static/js/funda/funda4.modal.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="Mango (Fruit)">
-	<md-content style="background-color: #3F51B5; color: white;">
+	<md-content style="background-color: {{color}}; color: white;">
 		<br/>
 		<br/>
 		<div layout="row" layout-align="center center">
@@ -13,9 +13,9 @@
 		<div layout="row" layout-align="center center">
 			<span flex="15"></span>
 			<span flex="70">
-				<h3>The first portrait shows the Queen as a fashionista with a bold actressy pose. Her dress, wig, everything about her is magnificent and clearly a testimony of her stature and power. The room has large stage curtains, the Queen has her hand on a globe, a symbol of her dominion on large territories. 
+				<h3>The first portrait shows the Queen as a fashionista with a bold actressy pose. Her dress, wig, everything about her is magnificent and clearly a testimony of her stature and power. The room has large stage curtains, the Queen has her hand on a globe, a symbol of her dominion on large territories. <br/>
 
-The second portrait shows the Queen in a plain English muslin dress with a straw hat. Quite ordinary, one would say and may be an attempt to relate to the general masses. But a Queen who shows herself like this in public is insulting the people and France. 
+The second portrait shows the Queen in a plain English muslin dress with a straw hat. Quite ordinary, one would say and may be an attempt to relate to the general masses. But a Queen who shows herself like this in public is insulting the people and France. <br/>
 
 So the painting that you were looking for is the third one. Here the Queen is shown with her children in an austere surrounding. She is dressed in red velvet, authoritative but not extravagant. She is wearing no jewellery, a wise move given her nickname ‘Madame Deficit’. Her portrayal as a mother is also an attempt to garner empathy from the citizenry.
 				</h3>
