--- a/thirdDime/static/js/question/question3.modal.html
+++ b/thirdDime/static/js/question/question3.modal.html
@@ -1,6 +1,6 @@
 <md-dialog aria-label="Mango (Fruit)">
-	<md-content style="background-color: #AC9D70;">
-    	<md-subheader class="md-sticky" style="background-color: #AC9D70;">
+	<md-content style="background-color: {{color}};">
+    	<md-subheader class="md-sticky" style="background-color: {{color}};">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
                 <div style="font-size: 1.17em; padding-left: 10px;">
