--- a/thirdDime/static/js/question/question4.modal.html
+++ b/thirdDime/static/js/question/question4.modal.html
@@ -1,6 +1,6 @@
-<md-dialog aria-label="Mango (Fruit)" style="background-color: #AC9D70;">
-  <md-content>
-    <md-subheader class="md-sticky" style="background-color: #AC9D70;">
+<md-dialog aria-label="Mango (Fruit)">
+  <md-content style="background-color: {{color}};">
+    <md-subheader class="md-sticky" style="background-color: {{color}};">
         <div layout="row">
             <i class="fa fa-paint-brush"> </i>
                 <div style="font-size: 1.17em; padding-left: 10px;">
@@ -9,7 +9,7 @@
         </div>
       </md-subheader>
         <div layout="row" layout-align="end center" style="font-size: .77em;">Click any painting to select.</div>
-  	<md-tabs md-selected="data.selectedIndex">
+  	<md-tabs md-selected="data.selectedIndex" >
       <md-tab id="tab1" aria-controls="tab1-content">
         By Lebrun (1783)
       </md-tab>
@@ -31,8 +31,5 @@
         	<img style="margin: auto; max-width: 100%;" src="/static/images/marrie3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer4('1787')" />
         </div>
     </ng-switch>
-    <div class="after-tabs-area" layout="row" layout-sm="column" layout-margin layout-align="left center">
-        
-    </div>
   </md-content>
 </md-dialog>
