--- a/thirdDime/static/js/funda/funda9.modal.html
+++ b/thirdDime/static/js/funda/funda9.modal.html
@@ -18,6 +18,7 @@
 		The second painting is by Otto Dix which represents a ruthless class struggle taking place in Germany.<br/>
 		The third painting is by Goya where he presents a scene from the Peninsular war.<br/>
 		The fourth painting is by Manet depicting the execution of Maximillian by a firing squad.<br/>
+		Goya's painting is the original inspiration. 
 				</h3>
 			</span>
 			<span flex="15"></i></span>
