--- a/thirdDime/static/js/funda/funda7.modal.html
+++ b/thirdDime/static/js/funda/funda7.modal.html
@@ -1,45 +1,22 @@
-<div ng-controller="ArmidaController">
 	<md-dialog aria-label="Mango (Fruit)">
+	<div ng-controller="ArmidaController">
 		<md-content style="background-color: {{color}}; color: white;">
-			<br/>
-			<br/>
-			<div layout="row" layout-align="center center" align="right">
-				<span flex="15"><i class="fa fa-quote-left"></i></span>
-				<span flex="85"></span>
-			</div>
 			<div layout="row" layout-align="center center">
 				<span flex="15"></span>
 				<span flex="70">
-					<h3>As we can see here the same story can be told in several ways. Every artist brings something unique to the narrative, an element that resonated with him the most. And it is this element that bears the watermark of the artist’s creation. 
-					</h3>
-					<div layout="column">
-						<h4>By Anthony van Dyck</h4>
-						<md-progress-linear md-theme="red" md-mode="determinate" ng-value="vote31"></md-progress-linear><br/><br/>
-					</div>
-					<div layout="column">
-						<h4>By Sebastiano Conca</h4>
-					<md-progress-linear md-theme="brown" md-mode="determinate" ng-value="vote32"></md-progress-linear><br/><br/>
-					</div>
-					<div layout="column">
-						<h4>By Nicolas Poussin</h4>
-					<md-progress-linear md-theme="green" md-mode="determinate" ng-value="vote33"></md-progress-linear><br/><br/>
-					</div>
-					<div layout="column">
-						<h4>By Michele Desubleo</h4>
-					<md-progress-linear md-theme="yellow" md-mode="determinate" ng-value="vote34"></md-progress-linear><br/><br/>
-					</div>
+					<h4>As we can see here the same story can be told in several ways. Every artist brings something unique to the narrative, an element that resonated with him the most. And it is this element that bears the watermark of the artist’s creation. 
+					</h4>
+					<h5>By Anthony van Dyck</h5>
+					<md-progress-linear md-theme="red" md-mode="determinate" ng-value="vote31"></md-progress-linear>
+					<h5>By Sebastiano Conca</h5>
+					<md-progress-linear md-theme="brown" md-mode="determinate" ng-value="vote32"></md-progress-linear>
+					<h5>By Nicolas Poussin</h5>
+					<md-progress-linear md-theme="green" md-mode="determinate" ng-value="vote33"></md-progress-linear>
+					<h5>By Michele Desubleo</h5>
+					<md-progress-linear md-theme="yellow" md-mode="determinate" ng-value="vote34"></md-progress-linear>
 				</span>
 				<span flex="15"></i></span>
 			</div>
-			<div layout="row" layout-align="center center">
-				<span flex="85"></span>
-				<span flex="15"><i class="fa fa-quote-right"></i></span>
-			</div>
 		</md-content>
-		  <div class="md-actions" layout="row" layout-align="center center" style="background-color: {{color}};">
-		    	<md-button class="md-primary" ng-click="close()" aria-label="Question">
-			      CLOSE
-		        </md-button>
-		  </div>
+	</div>
 	</md-dialog> 
-</div>
