--- a/thirdDime/static/js/question/question3.modal.html
+++ b/thirdDime/static/js/question/question3.modal.html
@@ -11,15 +11,16 @@
         <div layout="row" layout-align="end center" style="font-size: .77em;">Choose from options below.</div>
         <div layout="row" layout-align="end center" >
         	<img style="margin: auto; max-width: 100%;" src="/static/images/memory.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer('cypress')">
+            <div flex="20" >
+                <md-radio-group >
+                    <md-radio-button value="Decay" aria-label="Label 1" ng-click="answer3('one')">Death and decay</md-radio-button>
+                    <md-radio-button value="Relativity" aria-label="Label 2" ng-click="answer3('two')"> Relativity's idea of time </md-radio-button>
+                    <md-radio-button value="Dream" aria-label="Label 3" ng-click="answer3('three')">Dream state</md-radio-button>
+                    <md-radio-button value="Fluidity" aria-label="Label 4" ng-click="answer3('four')">Fluidity of time</md-radio-button>
+                </md-radio-group>       
+            </div>
         </div>
-        <div class="md-actions" layout="row" layout-align="center center">
-            <md-radio-group layout="row" layout-align="start center">
-                <md-radio-button value="Decay" aria-label="Label 1" ng-click="answer3('one')">Death and decay</md-radio-button>
-                <md-radio-button value="Relativity" aria-label="Label 2" ng-click="answer3('two')"> Relativity's idea of time </md-radio-button>
-                <md-radio-button value="Dream" aria-label="Label 3" ng-click="answer3('three')">Dream state</md-radio-button>
-                <md-radio-button value="Fluidity" aria-label="Label 4" ng-click="answer3('four')">Fluidity of time</md-radio-button>
-            </md-radio-group>       
-        </div>
+        
     </md-content>
 </md-dialog>
 
