FireFox fix, quiz icon.

--- a/thirdDime/static/js/funda/funda10.modal.html
+++ b/thirdDime/static/js/funda/funda10.modal.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="Mango (Fruit)">
 	<md-content style="background-color: {{color}}; color: white;">
-		
+		<h3>Share your thoughts on our FaceBook page.</h3>	
 	</md-content>
 </md-dialog>
