Revert "Merge branch 'master' of https://github.com/hobbes09/ThirdDime_Landing"
This reverts commit 2b0e687037a2119fe65aaf023f2f6ad717608314, reversing
changes made to 235258871d89e4ce1d84e45327c3ef77edc55735.

--- a/thirdDime/static/js/question/question10.modal.html
+++ b/thirdDime/static/js/question/question10.modal.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="Mango (Fruit)">
   <md-content style="background-color: {{color}};">
-        <img style="margin: auto; max-width: 100%;" src="/static/images/thoughts.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer10()" />
+        <img style="margin: auto; max-width: 100%;" src="/static/images/starry.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer10()" />
   </md-content>
 </md-dialog>
