Question 10 final text

--- a/thirdDime/static/js/funda/funda10.modal.html
+++ b/thirdDime/static/js/funda/funda10.modal.html
@@ -1,5 +1,11 @@
 <md-dialog aria-label="Mango (Fruit)">
 	<md-content style="background-color: {{color}}; color: white;">
-		<h3>Share your thoughts on our FaceBook page.</h3>	
+		<br/><br/>
+		<h3>Please share your thoughts on Our FaceBook page.</h3>
 	</md-content>
+	<div class="md-actions" layout="row" style="background-color: {{color}}; color: black;">
+	    <md-button href="https://www.facebook.com/pages/ThirdDime-Art/1518696245078520?fref=ts" target="_blank" style="color: black;">
+	      Facebook
+	    </md-button>
+  </div>
 </md-dialog>
