Final touchups for quiz.

--- a/thirdDime/static/js/funda/funda1.modal.html
+++ b/thirdDime/static/js/funda/funda1.modal.html
@@ -1,5 +1,6 @@
-<md-dialog aria-label="Mango (Fruit)">
+<md-dialog aria-label="Mango (Fruit)" class="funda">
 	<md-content style="background-color: {{color}}; color: white;">
+		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
 		<br/>
 		<br/>
 		<div layout="row" layout-align="center center">
@@ -22,4 +23,9 @@
 			<span flex="15"><i class="fa fa-quote-right"></i></span>
 		</div>
 	</md-content>
+	<div class="md-actions" layout="row">
+	    <md-button ng-click="fundaRoot(true)" class="md-primary">
+	      Next
+	    </md-button>
+    </div>
 </md-dialog>
