--- a/thirdDime/static/js/question/question1.modal.html
+++ b/thirdDime/static/js/question/question1.modal.html
@@ -1,16 +1,16 @@
-<md-dialog aria-label="Mango (Fruit)">
+<md-dialog aria-label="Mango (Fruit)"  class="que">
 	<md-content style="background-color: {{color}};">
     	<md-subheader class="md-sticky" style="background-color: {{color}};">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
                 <div style="font-size: 1.17em; padding-left: 10px;">
-                    <b><u>What might signify this bridge between the terrestrial and celestial ?</b></u>
+                    What might signify this bridge between the terrestrial and celestial ?
                 </div>
     		</div>
     	</md-subheader>
         <div layout="row" layout-align="end center" style="font-size: .77em;">Click on picture once to select.</div>
         <div layout="row" layout-align="end center" >
-        	<img style="margin: auto; max-width: 100%;" src="/static/images/starry.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer1('cypress')" />
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/starry.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer1('cypress')" style="box-shadow: 0px 0px 0px 5px #000, 0px 0px 0px 10px #fff;"/>
         </div>
     </md-content>
 </md-dialog>
