--- a/thirdDime/static/js/question/question6.modal.html
+++ b/thirdDime/static/js/question/question6.modal.html
@@ -1,10 +1,10 @@
-<md-dialog aria-label="Mango (Fruit)" >
+<md-dialog aria-label="Mango (Fruit)"  class="que">
   <md-content style="background-color: {{color}};">
     <md-subheader class="md-sticky" style="background-color: {{color}};">
         <div layout="row">
             <i class="fa fa-paint-brush"> </i>
                 <div style="font-size: 1.17em; padding-left: 10px;">
-                    <b><u>Each art movement produced work with some unique inherent characters. See if you can tag the following correctly: </b></u>
+                    Each art movement produced work with some unique inherent characters. See if you can tag the following correctly:
                 </div>
         </div>
       </md-subheader>
@@ -25,7 +25,7 @@
     </md-tabs>
     <ng-switch on="data.selectedIndex" class="tabpanel-container">
         <div role="tabpanel" id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: auto; max-width: 100%;" src="/static/images/test1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/test1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
           <div flex="20">
             <div layout="column">
               <div flex ng-show="showResult61"><br/><br/>
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div role="tabpanel" id="tab2-content" aria-labelledby="tab2" ng-switch-when="1" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: auto; max-width: 100%;" src="/static/images/test2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/test2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
           <div flex="20">
             <div layout="column">
               <div flex ng-show="showResult62"><br/><br/>
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div role="tabpanel" id="tab3-content" aria-labelledby="tab3" ng-switch-when="2" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-          <img style="margin: auto; max-width: 100%;" src="/static/images/test3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+          <img style="margin: 10px; max-width: 100%;" src="/static/images/test3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
           <div flex="20">
             <div layout="column">
               <div flex ng-show="showResult63"><br/><br/>
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div role="tabpanel" id="tab4-content" aria-labelledby="tab4" ng-switch-when="3" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-          <img style="margin: auto; max-width: 100%;" src="/static/images/test4.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+          <img style="margin: 10px; max-width: 100%;" src="/static/images/test4.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
           <div flex="20">
             <div layout="column">
               <div flex ng-show="showResult64"><br/><br/>
