--- a/thirdDime/static/js/funda/funda6.modal.html
+++ b/thirdDime/static/js/funda/funda6.modal.html
@@ -1,5 +1,6 @@
-<md-dialog aria-label="Mango (Fruit)">
+<md-dialog aria-label="Mango (Fruit)" class="funda">
 	<md-content style="background-color: {{color}}; color: white;">
+		<div layout="row" layout-align="end"><md-button ng-click="fundaRoot(false)">Close</md-button></div>
 		<br/>
 		<br/>
 		<div layout="row" layout-align="center center" align="right">
@@ -9,11 +10,11 @@
 		<div layout="row" layout-align="center center">
 			<span flex="15"></span>
 			<span flex="70">
-				<h3><b>Futurism</b> celebrated advanced technology and urban modernity. Committed to the new, its members wished to destroy older forms of culture and to demonstrate the beauty of modern life - the beauty of the machine, speed, violence and change. <br/>
+			<b>Futurism</b> celebrated advanced technology and urban modernity. Committed to the new, its members wished to destroy older forms of culture and to demonstrate the beauty of modern life - the beauty of the machine, speed, violence and change. <br/>
 <b>Impressionism</b> was a style of representational art that did not necessarily rely on realistic depictions. Scientific thought at the time was beginning to recognize that what the eye perceived and what the brain understood were two different things. The Impressionists sought to capture the former - the optical effects of light - to convey the passage of time, changes in weather, and other shifts in the atmosphere in their canvases.<br/>
 <b>Cubist</b> paintings aren’t meant to be realistic or life-like in any way. Instead, after looking at the subject from every possible angle, the artist will piece together fragments from different vantage points into one painting. In doing this, the artist is attempting to give a fuller, more detailed explanation of the subject—breaking past barriers of space and time.<br/>
 The <b>Fauve</b> painters were the first to break with Impressionism as well as with older, traditional methods of perception. Their spontaneous, often subjective response to nature was expressed in bold, undisguised brushstrokes and high-keyed, vibrant colors directly from the tube.
-				</h3>
+				
 			</span>
 			<span flex="15"></i></span>
 		</div>
@@ -22,4 +23,9 @@ The <b>Fauve</b> painters were the first to break with Impressionism as well as 
 			<span flex="15"><i class="fa fa-quote-right"></i></span>
 		</div>
 	</md-content>
+	<div class="md-actions" layout="row">
+	    <md-button ng-click="fundaRoot(true)" class="md-primary">
+	      Next
+	    </md-button>
+    </div>
 </md-dialog> 
