--- a/thirdDime/static/js/intro/intro.modal.html
+++ b/thirdDime/static/js/intro/intro.modal.html
@@ -18,8 +18,8 @@
 			<span flex="15"><i class="fa fa-quote-right"></i></span>
 		</div>
 	</md-content>
-	<div class="md-actions" layout="row" layout-align="center center" style="background-color: {{color}};">
-		<md-button class="md-primary" ng-click="questionDialog()" aria-label="Question">
+	<div class="md-actions" layout="row" layout-align="center center">
+		<md-button class="md-primary" ng-click="questionDialog()" aria-label="Question" style="font-weight: bold;">
 	      Dive
 	    </md-button>
 </div>
