--- a/thirdDime/static/js/question/question2.modal.html
+++ b/thirdDime/static/js/question/question2.modal.html
@@ -1,16 +1,16 @@
-<md-dialog aria-label="Mango (Fruit)">
+<md-dialog aria-label="Mango (Fruit)"  class="que">
 	<md-content style="background-color: {{color}};">
     	<md-subheader class="md-sticky" style="background-color: {{color}};">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
                 <div style="font-size: 1.17em; padding-left: 10px;">
-                    <b><u>What object has the artist used to represent Assumption of Mary into Heaven ?</b></u>
+                    What object has the artist used to represent Assumption of Mary into Heaven ?
                 </div>
     		</div>
     	</md-subheader>
         <div layout="row" layout-align="end center" style="font-size: .77em;">Click on picture once to select.</div>
         <div layout="row" layout-align="center center">
-        	<img style="margin: auto; max-width: 100%;" src="/static/images/virgin.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer2('Drapes')">
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/virgin.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer2('Drapes')">
         </div>
     </md-content>
 </md-dialog>
