--- a/thirdDime/static/js/question/question3.modal.html
+++ b/thirdDime/static/js/question/question3.modal.html
@@ -1,16 +1,16 @@
-<md-dialog aria-label="Mango (Fruit)">
+<md-dialog aria-label="Mango (Fruit)"  class="que">
 	<md-content style="background-color: {{color}};">
     	<md-subheader class="md-sticky" style="background-color: {{color}};">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
                 <div style="font-size: 1.17em; padding-left: 10px;">
-                    <b><u>What do you think this painting best relates to ?</b></u>
+                    What do you think this painting best relates to ?
                 </div>
     		</div>
     	</md-subheader>
         <div layout="row" layout-align="end center" style="font-size: .77em;">Choose from options below.</div>
         <div layout="row" layout-align="end center" >
-        	<img style="margin: auto; max-width: 100%;" src="/static/images/memory.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer('cypress')">
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/memory.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer('cypress')">
             <div flex="20" >
                 <md-radio-group >
                     <md-radio-button value="Decay" aria-label="Label 1" ng-click="answer3('one')">Death and decay</md-radio-button>
