--- a/thirdDime/static/js/question/question4.modal.html
+++ b/thirdDime/static/js/question/question4.modal.html
@@ -1,10 +1,10 @@
-<md-dialog aria-label="Mango (Fruit)">
+<md-dialog aria-label="Mango (Fruit)" class="que">
   <md-content style="background-color: {{color}};">
     <md-subheader class="md-sticky" style="background-color: {{color}};">
         <div layout="row">
             <i class="fa fa-paint-brush"> </i>
                 <div style="font-size: 1.17em; padding-left: 10px;">
-                    <b><u>Put your thinking caps on and tell us which according to you is the one she  commissioned for this purpose ?</u></b>
+                    Put your thinking caps on and tell us which according to you is the one she  commissioned for this purpose ?
                 </div>
         </div>
       </md-subheader>
@@ -22,13 +22,13 @@
     </md-tabs>
     <ng-switch on="data.selectedIndex" class="tabpanel-container">
         <div id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center" >
-        	<img style="margin: auto; max-width: 100%;" src="/static/images/marrie1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer4('1783')" />
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/marrie1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer4('1783')" />
         </div>
         <div id="tab2-content" aria-labelledby="tab2" ng-switch-when="1" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: auto; max-width: 100%;" src="/static/images/marrie2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer4('1775')" />
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/marrie2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer4('1775')" />
         </div>
         <div id="tab3-content" aria-labelledby="tab3" ng-switch-when="2" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: auto; max-width: 100%;" src="/static/images/marrie3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer4('1787')" />
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/marrie3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer4('1787')" />
         </div>
     </ng-switch>
   </md-content>
