--- a/thirdDime/static/js/question/question5.modal.html
+++ b/thirdDime/static/js/question/question5.modal.html
@@ -1,16 +1,16 @@
-<md-dialog aria-label="Mango (Fruit)">
+<md-dialog aria-label="Mango (Fruit)"  class="que">
 	<md-content style="background-color: {{color}};">
     	<md-subheader class="md-sticky" style="background-color: {{color}};">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
                 <div style="font-size: 1.17em; padding-left: 10px;">
-                    <b><u>Knowledge, riches and authority, one can achieve it all, but everything fades in when the ultimate reality unveils itself.What do you think is the “ultimate reality” in the following painting?</b></u>
+                    Knowledge, riches and authority, one can achieve it all, but everything fades in when the ultimate reality unveils itself.What do you think is the “ultimate reality” in the following painting?
                 </div>
     		</div>
     	</md-subheader>
         <div layout="row" layout-align="end center" style="font-size: .77em;">Click on picture once to select.</div>
-        <div layout="row" layout-align="end center" >
-        	<img style="margin: auto; max-width: 100%;" src="/static/images/amb.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer('skull')">
+        <div layout="row" layout-align="center center" >
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/amb.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer('skull')">
         </div>
     </md-content>
 </md-dialog>
