--- a/thirdDime/static/js/question/question8.modal.html
+++ b/thirdDime/static/js/question/question8.modal.html
@@ -1,10 +1,10 @@
-<md-dialog aria-label="Mango (Fruit)" >
+<md-dialog aria-label="Mango (Fruit)"  class="que">
   <md-content style="background-color: {{color}};">
     <md-subheader class="md-sticky" style="background-color: {{color}};">
         <div layout="row">
             <i class="fa fa-paint-brush"> </i>
                 <div style="font-size: 1.17em; padding-left: 10px;">
-                    <b><u>Which one is a painting?</b></u>
+                    Which one is a painting?
                 </div>
         </div>
       </md-subheader>
@@ -25,16 +25,16 @@
     </md-tabs>
     <ng-switch on="data.selectedIndex" class="tabpanel-container">
         <div role="tabpanel" id="tab1-content" aria-labelledby="tab1" ng-switch-when="0" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: auto; max-width: 100%;" src="/static/images/real1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer8()">
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/real1.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer8()">
         </div>
         <div role="tabpanel" id="tab2-content" aria-labelledby="tab2" ng-switch-when="1" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-        	<img style="margin: auto; max-width: 100%;" src="/static/images/real2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer8()">
+        	<img style="margin: 10px; max-width: 100%;" src="/static/images/real2.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer8()">
         </div>
         <div role="tabpanel" id="tab3-content" aria-labelledby="tab3" ng-switch-when="2" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-          <img style="margin: auto; max-width: 100%;" src="/static/images/real3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer8()">
+          <img style="margin: 10px; max-width: 100%;" src="/static/images/real3.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer8()">
         </div>
         <div role="tabpanel" id="tab4-content" aria-labelledby="tab4" ng-switch-when="3" md-swipe-left="next()" md-swipe-right="previous()" layout="row" layout-align="center center">
-          <img style="margin: auto; max-width: 100%;" src="/static/images/real4.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer8()">
+          <img style="margin: 10px; max-width: 100%;" src="/static/images/real4.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer8()">
         </div>
     </ng-switch>
     <div class="after-tabs-area" layout="row" layout-sm="column" layout-margin layout-align="left center">
