Question text styling

--- a/thirdDime/static/js/question/question1.modal.html
+++ b/thirdDime/static/js/question/question1.modal.html
@@ -1,9 +1,10 @@
+<link rel="stylesheet" type="text/css" href="question.style.css">
 <md-dialog aria-label="Mango (Fruit)"  class="que">
 	<md-content style="background-color: {{color}};">
     	<md-subheader class="md-sticky" style="background-color: {{color}};">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
-                <div style="font-size: 1.17em; padding-left: 10px;">
+                <div class="qStyle">
                     What might signify this bridge between the terrestrial and celestial ?
                 </div>
     		</div>
