--- a/thirdDime/static/js/question/question2.modal.html
+++ b/thirdDime/static/js/question/question2.modal.html
@@ -3,7 +3,7 @@
     	<md-subheader class="md-sticky" style="background-color: {{color}};">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
-                <div style="font-size: 1.17em; padding-left: 10px;">
+                <div class="qStyle">
                     What object has the artist used to represent Assumption of Mary into Heaven ?
                 </div>
     		</div>
