--- a/thirdDime/static/js/question/question5.modal.html
+++ b/thirdDime/static/js/question/question5.modal.html
@@ -3,7 +3,7 @@
     	<md-subheader class="md-sticky" style="background-color: {{color}};">
     		<div layout="row">
         		<i class="fa fa-paint-brush"> </i>
-                <div style="font-size: 1.17em; padding-left: 10px;">
+                <div class="qStyle">
                     Knowledge, riches and authority, one can achieve it all, but everything fades in when the ultimate reality unveils itself.What do you think is the “ultimate reality” in the following painting?
                 </div>
     		</div>
