--- a/thirdDime/static/js/question/question4.modal.html
+++ b/thirdDime/static/js/question/question4.modal.html
@@ -3,7 +3,7 @@
     <md-subheader class="md-sticky" style="background-color: {{color}};">
         <div layout="row">
             <i class="fa fa-paint-brush"> </i>
-                <div style="font-size: 1.17em; padding-left: 10px;">
+                <div class="qStyle">
                     Put your thinking caps on and tell us which according to you is the one she  commissioned for this purpose ?
                 </div>
         </div>
