--- a/thirdDime/static/js/funda/funda4.modal.html
+++ b/thirdDime/static/js/funda/funda4.modal.html
@@ -4,7 +4,7 @@
 		<br/>
 		<br/>
 		<div layout="row" layout-align="center center">
-			<div ng-show="result"> <h1>BRAVO</h1></div>
+			<div ng-show="result"> <h1>CORRECT !</h1></div>
 			<div ng-hide="result"> <h1>One with the Queen and her children</h1></div>
 		</div>
 		<div layout="row" layout-align="center center" align="right">
