TL;DR versions added for question 2 and 4

--- a/thirdDime/static/js/funda/funda2.modal.html
+++ b/thirdDime/static/js/funda/funda2.modal.html
@@ -14,8 +14,10 @@
 		<div layout="row" layout-align="center center">
 			<span flex="15"></span>
 			<span flex="70">
-				The theatrical drape of blood-red cloth looms in the upper portion of the canvas with the left portion leaving the painting’s frame, the artist possibly used this to show the Holy Virgin’s assumption into heaven.
+				<p>In short, the red drape matches her dress.</p>
+				<p>The theatrical drape of blood-red cloth looms in the upper portion of the canvas with the left portion leaving the painting’s frame, the artist possibly used this to show the Holy Virgin’s assumption into heaven.
 This painting illustrates the iconographic and formal revolution that Caravaggio instigated in the late 16th and early 17th centuries.He took on the task of translating people's reality and emotions without worrying about the conventions of representations of the sacred. The scene is very realistic, the body of the Virgin is not sacred except for the fine aureole at the top of its head. The painting fetched Caravaggio a lot of ridicule especially from the Church.
+				</p>
 				<div layout="row" layout-align="center center">
 		        	<img style="margin: 10px; max-width: 100%;" src="/static/images/virgin.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 		        </div>
