--- a/thirdDime/static/js/question/question3.modal.html
+++ b/thirdDime/static/js/question/question3.modal.html
@@ -8,7 +8,7 @@
                 </div>
     		</div>
     	</md-subheader>
-        <div layout="row" layout-align="end center" style="font-size: .77em;">Choose from options below.</div>
+        <div layout="row" layout-align="end left" style="font-size: .77em;">Choose from options below.</div>
         <div layout="row" layout-align="end center" >
         	<img style="margin: 10px; max-width: 100%;" src="/static/images/memory.jpg" pagespeed_url_hash="3617274378" onload="pagespeed.CriticalImages.checkImageForCriticality(this);" ng-click="answer('cypress')">
             <div flex="20" >
