--- a/thirdDime/static/js/question/question4.modal.html
+++ b/thirdDime/static/js/question/question4.modal.html
@@ -4,7 +4,7 @@
         <div layout="row">
             <i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
-                    Put your thinking caps on and tell us which according to you is the one she  commissioned for this purpose ?
+                    Put your thinking caps on and tell us which according to you is the one she  commissioned as A PR strategy ?
                 </div>
         </div>
       </md-subheader>
