--- a/thirdDime/static/js/question/question9.modal.html
+++ b/thirdDime/static/js/question/question9.modal.html
@@ -4,7 +4,7 @@
         <div layout="row">
             <i class="fa fa-paint-brush"> </i>
                 <div class="qStyle">
-                    Which one is the original inspiration among these paintings?
+                    Which painting inspired the rest of them ?
                 </div>
         </div>
       </md-subheader>
